<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/fragment_background_color"
    android:clickable="true"
    tools:context="com.zhengdianfang.dazhongbao.views.login.PhoneRegisterFragment">


    <com.zhengdianfang.dazhongbao.views.components.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:title="@string/fragment_phonenumber_verify" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/edittext_height"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:id="@+id/linearLayout2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:gravity="center"
            android:drawablePadding="8dp"
            android:layout_marginStart="32dp"
            android:drawableLeft="@drawable/postal_icon"
            android:background="@drawable/activity_login_input_default_background"
            android:text="@string/phone_china_code" />

        <EditText
            android:id="@+id/registerPhoneEditText"
            style="@style/AppTheme.EditText"
            android:layout_width="0dp"
            android:layout_marginStart="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:maxLines="1"
            android:paddingLeft="16dp"
            android:hint="@string/please_input_phonenumber"
            android:inputType="phone"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edittext_height"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/smsCodeEditText"
            style="@style/AppTheme.EditText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:maxLines="1"
            android:hint="@string/please_input_sms_code"
            android:layout_marginEnd="0dp"
            android:inputType="phone"
            tools:ignore="LabelFor" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="32dp"
            android:background="@drawable/activity_login_input_default_background">

            <Button
                android:id="@+id/getSmsCodeButton"
                style="@style/AppTheme.Login.VerifyCodeButton"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                />
        </FrameLayout>

    </LinearLayout>
    <EditText
        android:id="@+id/recommendEditText"
        style="@style/AppTheme.EditText"
        android:layout_width="match_parent"
        android:layout_marginStart="32dp"
        android:layout_height="@dimen/edittext_height"
        android:maxLines="1"
        android:hint="@string/fragment_register_recommend"
        android:layout_marginTop="24dp"
        android:inputType="phone"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="40dp"
        android:text="@string/submit_button_text" />
</LinearLayout>
