<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">大宗宝</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_settings">Settings</string>
    <string name="please_input_phonenumber">请输入手机号</string>
    <string name="please_input_password">请输入密码</string>
    <string name="activity_login_button_text">登录</string>
    <string name="activit_login_find_password">找回密码</string>
    <string name="activit_login_fast_funcation">快捷登录</string>
    <string name="activity_weixin_button_text">微信登录</string>
    <string name="activity_organization_button_text">机构注册</string>

...
    <string name="please_input_new_password">请输入新密码</string>
    <string name="please_input_confirm_password">再次输入密码</string>
    <string name="submit_button_text">提交</string>
    <string name="fragment_set_password">设置密码</string>
    <string name="phone_china_code">86</string>
    <string name="get_verify_sms_code">获取验证码</string>
    <string name="please_input_legal_phonenumber">请输入有效的手机号</string>
    <string name="please_input_legal_password">密码格式不正确</string>
    <string name="toast_login_success"><![CDATA[登录成功]]></string>
    <string name="fragment_register_recommend">推荐人手机号(非必填)</string>
    <string name="please_input_sms_code">请输入验证码</string>
    <string name="toast_sms_code_send_successful">验证码已发至您的手机，请查看</string>
    <string name="toast_register_successful">注册成功</string>
    <string name="button_diable_timer_alert">%d秒</string>
    <string name="toast_input_confirm_password_not_equal">密码不一致</string>
    <string name="toast_set_password_successful">设置成功</string>
    <string name="bottom_bar_home_title">首页</string>
    <string name="bottom_bar_auction_title">竞拍</string>
    <string name="bottom_bar_push_title"><![CDATA[ 发布]]></string>
    <string name="bottom_bar_personal_title">我的</string>
    <string name="fragment_personal_may_product">我的大宗</string>
    <string name="fragment_personal_my_start">感兴趣</string>
...
