<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/fragment_background_color"
    tools:context="com.zhengdianfang.dazhongbao.views.login.ModifyPasswordFragment">


    <com.zhengdianfang.dazhongbao.views.components.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:title="@string/fragment_modify_password" />

    <EditText
        android:id="@+id/modifyPasswordEditText"
        style="@style/AppTheme.EditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edittext_height"
        android:hint="@string/please_input_new_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/modifyPasswordConfirmEditText"
        style="@style/AppTheme.EditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edittext_height"
        android:hint="@string/please_input_confirm_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/modifyPasswordSubmitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:text="@string/submit_button_text" />

</LinearLayout>
